Fix big banner buttons alignment on large screens

--- a/components/heart_component/heart.css
+++ b/components/heart_component/heart.css
@@ -1,3 +1,7 @@
+body {
+  font-size: var(headline-100, 150px);
+}
+
 .hearts {
   background-color: transparent;
   cursor: pointer;
@@ -13,10 +17,10 @@
   font-size: 0.75rem;
   font-weight: 500;
   flex-direction: row;
-  width: px;
 }
 
 .heart {
+  display: flex;
   width: 30px;
   height: 30px;
   border-radius: 50%;
